install: web: Fix truncated iframe with very wide aspect ratios

--- a/docs/getting-started/install/web.module.css
+++ b/docs/getting-started/install/web.module.css
@@ -3,4 +3,5 @@
   height: 100vh;
   border: none;
   border-radius: 4px;
+  min-width: 50rem;
 }
